fix tabbing issue on mobile menu

--- a/source/_patterns/02-organisms/navigation/ulti-menu/_ulti-menu.scss
+++ b/source/_patterns/02-organisms/navigation/ulti-menu/_ulti-menu.scss
@@ -20,6 +20,8 @@
     transition: $medium-transition-speed $standard-ease;
     display: block;
     max-height: 0;
+    visibility: hidden;
+    opacity: 0;
     margin: 0;
     padding: 0;
     box-shadow: none;
@@ -32,6 +34,8 @@
 
     &.open {
       max-height: 200vh;
+      opacity: 1;
+      visibility: visible;
     }
   }
 
